--- a/src/styles/components/_main.scss
+++ b/src/styles/components/_main.scss
@@ -4,7 +4,7 @@
     top: 0;
     left: 0;
     width: 100%;
-    height: 100%;
+    height: auto;
     background-color: rgba(0, 0, 0, 0.5);
   }
   .videoBG {
@@ -16,7 +16,7 @@
     .content {
       position: absolute;
       width: 100%;
-      height: 100%;
+      height: 100vh;
       top: 0;
       display: flex;
       flex-direction: column;
